--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basic HTML Website</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <header>
         <h1>Jonnel Vergabera</h1>
-    </header>
-
     <nav>
         <ul>
             <li>
@@ -20,10 +20,23 @@
             </li>
         </ul>
     </nav>
+    </header>
 
     <Main>
         <h1>Front-End Developer</h1>
         <p>Sample Basic HTML Website</p>
+
+        <aside>
+            <h1>Projects</h1>
+            <a href="">HTML Only Portfolio</a>
+            <a href="">Calculalor</a>
+            <a href="">Quiz App</a>
+            <a href="">Countdown Timer</a>
+            <a href="">Product Upcoming Page</a>
+        </aside>
+
+        <section></section>
+        <section></section>
     </Main>
 
     <section class="projects">Projects</section>
